# Testing-binary-trees

assignment3/: README.md  assignment3.cabal  par.txt
assignment3/.stack-work/ghci/50fcc344/: cabal_macros.h
assignment3/.stack-work/ghci/eb2f4714/: cabal_macros.h
assignment3/.stack-work/install/5adf4686/flag-cache/: assignment3-0.1.0.0-9i4uiBo51Te8KoS5E69sq9
assignment3/.stack-work/install/5adf4686/lib/x86_64-windows-ghc-8.6.3/assignment3-0.1.0.0-1DFvuy72ZJrE0fXsM2rMND/: Megap.hi
assignment3/.stack-work/install/5adf4686/lib/x86_64-windows-ghc-8.6.3/assignment3-0.1.0.0-9i4uiBo51Te8KoS5E69sq9/: Datatypes.hi  DistinguishableValues.hi  Megap.hi  Stack.hi
assignment3/.stack-work/install/5adf4686/pkgdb/: assignment3-0.1.0.0-1DFvuy72ZJrE0fXsM2rMND.conf  package.cache
assignment3/src/: DistinguishableValues.hs  Megap.hs  Stack.hs  Test.hs
