name:                assignment3
version:             0.1.0.0
author:              Group
maintainer:          Group
copyright:           (c) 2017 Group
category:            Teaching
build-type:          Simple
extra-source-files:  README.md, par.txt
cabal-version:       >=1.10

library
  exposed-modules:
      Stack,Megap,DistinguishableValues,Test
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,megaparsec,QuickCheck
  default-language: Haskell2010